--- a/DynamicSpecs/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs/DynamicSpecs.Core.csproj
@@ -1,74 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F4822A3-81C4-4CDE-A802-24B37C6044F5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicSpecs.Core</RootNamespace>
-    <AssemblyName>DynamicSpecs.Core</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="..\Shared.AssemblyInfo.cs">
-      <Link>Properties\Shared.AssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="AsyncHelper\AsyncTestUtilities.cs" />
-    <Compile Include="AsyncHelper\GeneralThreadAffineContext.cs" />
-    <Compile Include="AsyncHelper\SynchronizationContextSwitcher.cs" />
-    <Compile Include="IRegisterTypes.cs" />
-    <Compile Include="IResolveTypes.cs" />
-    <Compile Include="ISpecify.cs" />
-    <Compile Include="ISupport.cs" />
-    <Compile Include="ICreateTypeStores.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecificationEngine.cs" />
-    <Compile Include="WorkflowExtensions\Extensions.cs" />
-    <Compile Include="WorkflowExtensions\ExtensionPoint.cs" />
-    <Compile Include="WorkflowExtensions\IHandleDefaultTypes.cs" />
-    <Compile Include="WorkflowExtensions\IRegisterTypesFor.cs" />
-    <Compile Include="WorkflowExtensions\DefaultTypeHandler.cs" />
-    <Compile Include="WorkflowExtensions\RequestTypeAttribute.cs" />
-    <Compile Include="WorkflowExtensions\WorkflowPosition.cs" />
-    <Compile Include="WorkflowExtensions\IExtend.cs" />
-    <Compile Include="TypedWorkflowSpecification.cs">
-      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="WorkflowSpecification.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="DynamicSpecs.Core.nuspec" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<DefaultLanguage>en-US</DefaultLanguage>
+		<ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+		<!-- <TargetFrameworkProfile>Profile111</TargetFrameworkProfile> -->
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<OutputPath>bin\$(Configuration)\</OutputPath>
+		<!--<Authors>$author$</Authors>-->
+		<PackageIconUrl>https://raw.githubusercontent.com/HerrLoesch/DynamicSpecs/master/Ressources/logo.png</PackageIconUrl>
+		<PackageLicenseUrl>https://raw.githubusercontent.com/HerrLoesch/DynamicSpecs/master/LICENSE.md</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/HerrLoesch/DynamicSpecs</PackageProjectUrl>
+		<PackageReleaseNotes>
+			Thanks to @Firedragonweb we support now asynchronouse tests with GivenAsnyc and WhenAsync
+			We can also request types by using the RequestType attribute. In this case a default type will be injected to our SUT.
+		</PackageReleaseNotes>
+		<PackageTags>DynamicSpecs Specification Test NUnit MSTest BDD TDD</PackageTags>
+	</PropertyGroup>
+	<!--<ItemGroup>
+		<Compile Include="..\Shared.AssemblyInfo.cs" Link="Properties\Shared.AssemblyInfo.cs" />
+		<Compile Update="TypedWorkflowSpecification.cs">
+			<ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+		</Compile>
+	</ItemGroup>-->
 </Project>
