--- a/DynamicSpecs.Core/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs.Core/DynamicSpecs.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <PackageId>DynamicSpecs</PackageId>
     <Description>A dynamic specification framework for C#.</Description>
     <Authors>Hendrik Loesch</Authors>
