--- a/MSTest/DynamicSpecs.MSTest.Specs/DynamicSpecs.MSTest.Specs.csproj
+++ b/MSTest/DynamicSpecs.MSTest.Specs/DynamicSpecs.MSTest.Specs.csproj
@@ -1,146 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1DC8061-5D3D-43D7-9025-00FB31F54E65}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicSpecs.MSTest.Specs</RootNamespace>
-    <AssemblyName>DynamicSpecs.MSTest.Specs</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
-    <IsCodedUITest>False</IsCodedUITest>
-    <TestProjectType>UnitTest</TestProjectType>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
+    <TargetFramework>net48</TargetFramework>
+    <PackageId>DynamicSpecs.MSTest.Specs</PackageId>
+    <Description>DynamicSpecs MSTest tests</Description>
+    <Authors>Hendrik Loesch</Authors>
+    <Product>DynamicSpecs</Product>
+    <Copyright>Copyright © 2022 Hendrik Loesch</Copyright>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
+    <Version>3.0.0</Version>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
-  <Choose>
-    <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-  <ItemGroup>
-    <Compile Include="BasicFeatures\MockConfigurationIsProvided.cs" />
-    <Compile Include="BasicFeatures\When_a_mock_is_used.cs" />
-    <Compile Include="BasicFeatures\When_a_specification_is_created.cs" />
-    <Compile Include="BasicFeatures\When_specific_type_is_configured.cs" />
-    <Compile Include="BasicFeatures\When_static_class_is_tested.cs" />
-    <Compile Include="BasicFeatures\When_using_support_classes.cs" />
-    <Compile Include="ExampleClasses\DummyClass.cs" />
-    <Compile Include="ExampleClasses\IAmAServiceDummy.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WorkflowExtensions\Configuration.cs" />
-    <Compile Include="WorkflowExtensions\DataProvider.cs" />
-    <Compile Include="WorkflowExtensions\DefaultImplementationRegistration\DefaultImplemenation.cs" />
-    <Compile Include="WorkflowExtensions\DefaultImplementationRegistration\IDefaultImplementation.cs" />
-    <Compile Include="WorkflowExtensions\DefaultImplementationRegistration\IRequestDefaultImplementation.cs" />
-    <Compile Include="WorkflowExtensions\DefaultImplementationRegistration\WhenATypeIsRegisteredAsDefaultImplementation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeGiven.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeSUTCreation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeTypeRegistration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataBeforeWhen.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\DataProvider\DataByDefault.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeGiven.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeSUTCreation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeTypeRegistration.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataBeforeWhen.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\Interfaces\IRequestDataByDefault.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_given_phase.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_SUT_creation.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_before_when_phase.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_for_a_default_step.cs" />
-    <Compile Include="WorkflowExtensions\ExecutionTimes\When_data_is_requested_for_each_phase.cs" />
-    <Compile Include="WorkflowExtensions\IProvideData.cs" />
-    <Compile Include="WorkflowExtensions\IRequestData.cs" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="FakeItEasy" Version="7.3.1" />
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
-      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
-      <Name>DynamicSpecs.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DynamicSpecs.MSTest\DynamicSpecs.MSTest.csproj">
-      <Project>{3d37ad7e-a891-4b21-9e3f-edb8e8cf75cc}</Project>
-      <Name>DynamicSpecs.MSTest</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj" />
+    <ProjectReference Include="..\DynamicSpecs.MSTest\DynamicSpecs.MSTest.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="FakeItEasy">
-      <Version>3.4.2</Version>
-    </PackageReference>
-    <PackageReference Include="FluentAssertions">
-      <Version>5.10.3</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Choose>
-    <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITesting, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
