--- a/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
+++ b/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
@@ -2,18 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-      <PackageId>DynamicSpecs.NUnit</PackageId>
-      <Description>DynamicSpecs NUnit integration</Description>
-      <Authors>Hendrik Loesch</Authors>
-      <Product>DynamicSpecs</Product>
-      <Copyright>Copyright © 2018 Hendrik Loesch</Copyright>
-      <AssemblyVersion>3.0.0.0</AssemblyVersion>
-      <FileVersion>3.0.0.0</FileVersion>
-      <Version>3.0.0</Version>
+    <PackageId>DynamicSpecs.NUnit</PackageId>
+    <Description>DynamicSpecs NUnit integration</Description>
+    <Authors>Hendrik Loesch</Authors>
+    <Product>DynamicSpecs</Product>
+    <Copyright>Copyright © 2022 Hendrik Loesch</Copyright>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
+    <Version>3.0.0</Version>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
   </ItemGroup>
 
   <ItemGroup>
