--- a/DynamicSpecs.Core/DynamicSpecs.Core.csproj
+++ b/DynamicSpecs.Core/DynamicSpecs.Core.csproj
@@ -1,15 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <PackageId>DynamicSpecs</PackageId>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>DynamicSpecs.Core</PackageId>
     <Description>A dynamic specification framework for C#.</Description>
     <Authors>Hendrik Loesch</Authors>
     <Product>DynamicSpecs</Product>
-    <Copyright>Copyright © 2018 Hendrik Loesch</Copyright>
-    <AssemblyVersion>3.0.0.0</AssemblyVersion>
-    <FileVersion>3.0.0.0</FileVersion>
-    <Version>3.0.0</Version>
+    <Copyright>Copyright © 2022 Hendrik Loesch</Copyright>
+    <AssemblyVersion>3.0.1.0</AssemblyVersion>
+    <FileVersion>3.0.1.0</FileVersion>
+    <Version>3.0.1</Version>
+    <IsTestProject>false</IsTestProject>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/HerrLoesch/DynamicSpecs</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/HerrLoesch/DynamicSpecs</RepositoryUrl>
+    <PackageTags>DynamicSpecs; Specification; Test; MSTest; BDD; TDD;</PackageTags>
+    <PackageReleaseNotes>Update on .NET Standard 2.0</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Ressources\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
