--- a/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
+++ b/NUnit/DynamicSpecs.NUnit/DynamicSpecs.NUnit.csproj
@@ -7,10 +7,17 @@
     <Authors>Hendrik Loesch</Authors>
     <Product>DynamicSpecs</Product>
     <Copyright>Copyright © 2022 Hendrik Loesch</Copyright>
-    <AssemblyVersion>3.0.0.0</AssemblyVersion>
-    <FileVersion>3.0.0.0</FileVersion>
-    <Version>3.0.0</Version>
+    <AssemblyVersion>3.0.1.0</AssemblyVersion>
+    <FileVersion>3.0.1.0</FileVersion>
+    <Version>3.0.1</Version>
     <IsTestProject>false</IsTestProject>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/HerrLoesch/DynamicSpecs</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/HerrLoesch/DynamicSpecs</RepositoryUrl>
+    <PackageTags>DynamicSpecs; Specification; Test; NUnit; BDD; TDD;</PackageTags>
+    <PackageReleaseNotes>Update on .NET Standard 2.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +27,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\DynamicSpecs.AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj" />
     <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\..\Ressources\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
