--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -18,21 +18,23 @@ jobs:
       Solution_Name: DynamicSepcs.sln
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-
-    # Install the .NET Core workload
     - name: Install .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
 
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
+    - name: Checkout
+      uses: actions/checkout@v2
+
+        
+    - name: Restore
+      run: dotnet restore
+    
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
+      
+    - name: Build
+      run: dotnet build
 
-    # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test
