--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         configuration: [Debug, Release]
 
-    runs-on: windows-latest                
+    runs-on: ubuntu-latest               
 
     env:
       Solution_Name: DynamicSepcs.sln
@@ -25,14 +25,10 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
-
         
     - name: Restore
-      run: dotnet restore
-    
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-      
+      run: dotnet restore   
+     
     - name: Build
       run: dotnet build
 
